fixed margin issue on mobile view

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -576,6 +576,7 @@ p {
 }
 .mobile-details{
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .mobileLogo {
